[package]

name = "firebase"
version = "0.9.2"
description = "Rust based library for working with Firebase, currently still under heavy development"
readme = "README.md"
repository = "https://github.com/gt3ch1/rust-firebase"
license = "MIT"
authors = ["David White <david.white@spry-soft.com>", "Michael Eden <themichaeleden@gmail.com>", "Gavin Pease <gavinpease@gmail.com>"]
exclude = ["examples/*", "tests/*"]
keywords = ["firebase", "rest", "api"]

[dependencies]
isahc = "1.4.0"
url = "2.2.2"
rustc-serialize = "0.3.24"
